# sequence-fairies

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CITATION.cff  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
conda-recipe/: conda_build_config.yaml  meta.yaml
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/content/: concatenator.rst  dsmReader.rst  extractDomains.rst  fileMerger.rst  general.rst  installation.rst  isoformCleaner.rst  seqCheck.rst  seqExtract.rst
docs/source/documentationfiles/: README.md  domainAnnotation.rst
examples/concatenator/complete/: aln1.fasta  aln2.fasta
examples/concatenator/pattern/: ReadMe.txt  aln1.fasta  aln2.fasta
examples/concatenator/prefix/: aln1.fasta  aln2.fasta  aln3.fasta
src/: CMakeLists.txt  GFFParser.cpp  GFFParser.hpp  ITOLWriter.cpp  ITOLWriter.hpp  SummaryStatistics.cpp  SummaryStatistics.hpp  concatenator.cpp  concatenator.hpp  concatenatorMain.cpp  extractDomains.hpp  extractDomainsMain.cpp  fileMergerMain.cpp  gffStatistics.cpp  gffStatistics.hpp  gffStatisticsMain.cpp  identifyName.cpp  identifyName.hpp  isoformCleaner.cpp  isoformCleaner.hpp  isoformCleanerMain.cpp  seqCheck.cpp  seqCheck.hpp  seqCheckMain.cpp  seqExtract.cpp  seqExtract.hpp  seqExtractMain.cpp
src/cmake_generated/: project_version.h.in
src/isoformCleaner/: CMakeLists.txt  GFFParser.cpp  identifyName.cpp  isoformCleaner.cpp  isoformCleanerMain.cpp
tests/: CMakeLists.txt
tests/integrationTests/: concatenator_tests.sh  extractDomains_tests.sh  fileMerger_tests.sh  gffStatistics_tests.sh  isoformCleaner_tests.sh  run_all_tests.sh  seqCheck_tests.sh  seqExract_tests.sh
tests/integrationTests/data/: format.txt
tests/integrationTests/data/concatenator/: aln1.fa  aln2.fa  aln3.fasta  aln4.fasta  concat_aln_result.fasta
tests/integrationTests/data/extractDomains/: demo_seq.fasta  demo_seq.pfam  fake_seq.fa  multi_file_domains_result.fa  seqs.fasta  seqs.pfam  seqs_result.fasta  specificID.fasta  specificID.pfam  specificID_env_result.fa  specificID_minL_env_result.fa  specificID_minL_result.fa  specificID_result.fa
tests/integrationTests/data/fileMerger/: merged_result.fa  test1.fa  test2.fa
tests/integrationTests/data/gffStatistics/: example.gff
tests/integrationTests/data/isoformCleaner/: gff3.fasta  gff3.gff3  gff3_result.fasta  missing.gff3  regex.fasta  regex_result.fasta  splitChar.fasta  splitChar_fail.fasta  splitChar_fail_result.fasta  splitChar_result.fasta
tests/integrationTests/data/seqCheck/: aa.fa  fix-keep-report-result.txt  fix-keep-result.fasta  fix-remove-result.fasta  input.fasta  nt.fa  stop1-result.fasta  stop2-result.fasta
tests/integrationTests/data/seqExtract/: inputList.txt  names.fasta  names2.fasta  proteome1.fa  proteome2.fa
tests/unitTests/concatenator/: concatenator_Test.hpp  concatenator_tests.cpp
tests/unitTests/gffStatistics/: SummaryStatistics_Test.hpp  gffStatistics_tests.cpp
tests/unitTests/isoformCleaner/: gff_Test.hpp  identifyName_Test.hpp  isoformCleaner_Test.hpp  isoformCleaner_tests.cpp  test.gff3
